# LinuxHomework2023

./: .gitignore
homework1/: CMakeLists.txt  Page.h  Wrapper.cpp  Wrapper.h  readme.md  test.cpp
homework2/: main.cpp
homework3/: CMakeLists.txt  readme.md  sort_mgr.h  spliter.cpp  spliter.h  task.h  test.cpp  thread_pool.h
homework3/input_dir/: 222  333
